keep the footer visible, avoid colliding with long links

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@ a {
 #container {
     width: 700px;
     margin: 0 auto;
+    overflow: auto;
 }
 
 #url_container {
@@ -22,14 +23,16 @@ a {
     padding: 10px;
     font-family: Consolas, Menlo, Courier, monospace;
     word-wrap: break-word;
+    margin-bottom: 100px;
 }
 
 footer {
     width: 700px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     font-size: 0.8em;
     text-align: center;
-    border-top: thin #ccc solid;
-    color: #ccc;
+    background-color: #eee;
+    border-radius: 5px;
+    color: #bbb;
 }
